<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="App2WebHandoffExample" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SVF-0m-IF8">
                                <rect key="frame" x="115.5" y="318" width="143" height="30"/>
                                <state key="normal" title="WKHandoffWebView"/>
                                <connections>
                                    <action selector="wkAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="efY-ge-DNh"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KeO-QW-ir7">
                                <rect key="frame" x="120" y="280" width="134" height="30"/>
                                <state key="normal" title="UIHandoffWebView"/>
                                <connections>
                                    <action selector="uiAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LXS-bz-3hP"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYG-EU-hn0">
                                <rect key="frame" x="80" y="356" width="214" height="30"/>
                                <state key="normal" title="SFHandoffSafariViewController"/>
                                <connections>
                                    <action selector="sfAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cLY-tW-eRt"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="KeO-QW-ir7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0fE-Rh-wXB"/>
                            <constraint firstItem="SVF-0m-IF8" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0qv-yk-sGx"/>
                            <constraint firstItem="UYG-EU-hn0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NT6-ko-gwV"/>
                            <constraint firstItem="UYG-EU-hn0" firstAttribute="top" secondItem="SVF-0m-IF8" secondAttribute="bottom" constant="8" id="QfR-70-6CO"/>
                            <constraint firstItem="SVF-0m-IF8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W96-3N-TjJ"/>
                            <constraint firstItem="SVF-0m-IF8" firstAttribute="top" secondItem="KeO-QW-ir7" secondAttribute="bottom" constant="8" id="p0G-hi-pwd"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
